# Halite-II

./: !sudo  .gitattributes  .gitignore  .htaccess  .travis.yml  BetterBotForDebugging.exe.REMOVED.git-id  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Halite.sln  INSTALL.md  LICENSE  README.MD  README.md  SPEC.md  appveyor.yml  appveyor32.yml  build-deployment.sh  cost.py  foo.txt  random_game.php  setup-project.sh  setupServer.sh  setupWebsite.sh  updateLeaderboardScreenshot.sh
AIResources/C++/: AINetworking.h  Networking.h  (+1 more)
Halite/: 39416138.hlt.REMOVED.git-id  39417803.hlt.REMOVED.git-id  39418443.hlt.REMOVED.git-id  39500165.hlt.REMOVED.git-id  ColorCodes.txt  FrickinNeuralNetwork.hlt.REMOVED.git-id  Halite.exe.REMOVED.git-id  Halite.sln  Halite.vcxproj  Halite.vcxproj.filters
HalitePlayer/: HalitePlayer.vcxproj  HalitePlayer.vcxproj.filters
Website/: backend.js  dashboard.html  index.css  index.html  newbot.html  signin.html  signup.html
Worker/: Sandbox.php
admin/: DISASTER.md  INSTALL.md  NEW_LANGUAGE.md  SPEC.md  checkTaskCompletion.py  commandRunner.py  config.sh  cost.py  halite1orgdata.csv  org_admin.py  orgadmin.py  rankReset.py  setup_coordinator.sh  setup_coordinator__startup_script.sh  setup_firewall_rules.sh  setup_gpu_worker_image.sh  setup_gpu_workers.sh  setup_website.sh  setup_website__startup_script.sh  setup_worker_image.sh  setup_workers.sh  setup_workers__startup_script.sh  updateOrgs.py
airesources/: Halite.csproj  HaliteHelper.cs  MyBot.cs  README.MD  pipe_socket_translator.py
airesources/C++/: AINetworking.h  BasicBot  BasicBot.cpp  BasicBot.hpp  CMakeLists.txt  Makefile  MyBot  MyBot.cpp  MyBot.hpp  Networking.h  Networking.hpp  README.md  RandomBot.cpp  a.out  hlt.h  hlt.hpp  main.cpp  make.bat  make2017.bat  my_bot  my_bot.cpp  networking.hpp  runGame.bat  runGame.sh  run_game.bat  run_game.sh  socket_networking.hpp
airesources/C++/ExampleBot/Random/: MyBot.cpp  MyBot.h  Random.cpp  Random.h
airesources/C++/hlt/: Behavior.cpp  Behavior.hpp  Constants.hpp  Entity.cpp  Entity.hpp  Globals.cpp  Globals.hpp  Log.cpp  Log.hpp  Map.cpp  Map.hpp  Move.hpp  collision.hpp  constants.hpp  entity.cpp  entity.hpp  entity_id.cpp  entity_id.hpp  hlt.hpp  hlt_in.cpp  hlt_in.hpp  hlt_out.hpp  location.cpp  location.hpp  log.cpp  log.hpp  map.cpp  map.hpp  move.cpp  move.hpp  navigation.hpp  planet.hpp  ship.hpp  types.hpp  util.hpp
apiserver/: alembic.ini  delete_old_games.sh  requirements.txt  setup.py  setup.sh
badges/: main.py  requirements.txt
bot-bosses/: README.md
cron/: backupWebsite
environment/: 1471010133-1014372587.hlt.7z  CMakeLists.txt  Makefile  environment  install.sh  main.cpp  make.bat  make2017.bat  make2017_32.bat  make_emscripten_zstd.sh  set_version.sh  version  version.hpp  version.hpp.in
environment/PPMs/: BaronVonBobble.ppm  DavidS.ppm  Eric.ppm
environment/core/: Constants.cpp  Constants.hpp  Entity.cpp  Entity.hpp  GameEvent.cpp  GameEvent.hpp  Halite.cpp  Halite.hpp  Replay.cpp  Replay.hpp  SimulationEvent.cpp  SimulationEvent.hpp  Statistics.cpp  Statistics.hpp  hlt.cpp  hlt.hpp  json.hpp
environment/core/mapgen/: AsteroidCluster.cpp  AsteroidCluster.hpp  Generator.cpp  Generator.h  Generator.hpp  SolarSystem.cpp  SolarSystem.h  SolarSystem.hpp  TilingReflecting.cpp  TilingReflecting.h
environment/core/util/: distributions.hpp
environment/networking/: BotInputError.cpp  BotInputError.hpp  Networking.cpp  Networking.hpp
environment/tests/: FailInitBot.py  ModBot.py  TieEvalBot.py  TimeoutInitBot.py  testenv.py
environment/zstd-1.3.0/: index.html  libzstd.js  shim.c
halite/: DebianHalite.zip.REMOVED.git-id  DebianPackager.sh
libhaliteviz/: index.html  index.js  package-lock.json  package.json  webpack.config.js
manager/: .htaccess  API.class.php  ManagerAPI.php  api.php  commandRunner.py  trueskillMatchQuality.py  updateTrueskill.py  updateTruskill.py
multimedia/: 2424BasicMid.mp4.REMOVED.git-id  3232MidGood.mp4.REMOVED.git-id  4848GoodBetter.mp4.REMOVED.git-id  6464BasicBasicMidMidGoodGoodBetterBetter.mp4.REMOVED.git-id  8080BasicBetter.mp4.REMOVED.git-id  ExampleGame.gif.REMOVED.git-id  SampleGame.gif.REMOVED.git-id  SampleGame.mp4.REMOVED.git-id  Sample_Game.mp4.REMOVED.git-id
musicgenerator/: main.py
new_bots/: common.py  crashlander.py  dogfighter.py  dogfightermk2.py  fastsettler.py  fastsettler_dogfightermk2.py  null.py  settler.py  settlermk2.py  test2.py  tradeoffs.py  tradeoffsmk3.py  warper.py
promo-website/: Gemfile  _config.yml  deploy_site_local.sh  deploy_site_remote.sh  package-lock.json  webpack.config.js
quickviz/: index.html  quickviz.css  quickviz.js
spec/: SPEC.md
src/: main.rs
standalone_visualizer/: index.html  main.js  package-lock.json  package.json  visualizer.js
tests/: WebsiteTests.php  install.sh  installBuildTools.sh  runTests.py  runTests.sh  setupMysql.py  test.ini  tests.py  travisTests.ini
tmp/: common.py  test2.py
visualizer/: buildVisualizer.sh  index.html  index.js  license  main.js  package-lock.json  package.json  readme.md
website/: .eslintrc.json  .gitignore  .htaccess  404.md  404.php  Halite-Mac.zip.REMOVED.git-id  README.md  _config.yml  about.md  about.php  advanced_command_line.php  advanced_development.php  advanced_game_server.php  advanced_libraries.php  advanced_replay_file.php  advanced_strategy.php  advanced_third_party.php  advanced_writing_sp.php  api_spec.php  archiveEnvironment.sh  archiveStarterPackages.sh  associate.html  associate.php  basic.php  basic_tutorial.php  basics_faqs.php  basics_improve_random.php  basics_intro_halite.php  basics_quickstart.php  bfs_tutorial.php  blog.md  bot.php  build_environment_spec.php  build_site.sh  composer.json  contact.md  contest_rules.php  contest_spec.php  create-account.md  dashboard.html  (+75 more)
worker/: .worker.py.swo  .worker.py.swp  Compiler.php  Dockerfile  Environment.REMOVED.git-id  archive.py  backend.py  buildDocker.sh  changeAPIKey.py  compiler.py  index.php  install.sh  run.php  runGame.sh  sandbox.py  startWorkerScreen.sh  stopWorkerScreen.sh  worker.py  zip.py
(+1687 files in other folders)
